==> MikroElektronika/mikrosdk_v2/targets/arm/mikroe/stm32/src/i2c/implementation_1/hal_ll_i2c_master.c <==
#include "hal_ll_rcc.h"
#include "hal_ll_gpio.h"
#include "hal_ll_i2c_master.h"
#include "hal_ll_i2c_pin_map.h"
#include "delays.h"
#define hal_ll_i2c_get_module_state_address ((hal_ll_i2c_master_handle_register_t *)*handle)
#define hal_ll_i2c_get_handle (hal_ll_i2c_master_handle_register_t *)hal_ll_i2c_get_module_state_address->hal_ll_i2c_master_handle
#define hal_ll_i2c_get_base_struct(_handle) ((hal_ll_i2c_base_handle_t *)_handle)
#define hal_ll_i2c_get_base_from_hal_handle ((hal_ll_i2c_hw_specifics_map_t *)((hal_ll_i2c_master_handle_register_t *)\
                                            (((hal_ll_i2c_master_handle_register_t *)(handle))->hal_ll_i2c_master_handle))->hal_ll_i2c_master_handle)->base
#define hal_ll_set_frequency(freqrange,speed) (speed<=100000)?(freqrange + 1):(((freqrange*300U)/1000U)+1U)
#define hal_ll_i2c_clear_status_reg(_temp) (_temp = hal_ll_hw_reg->sr1); \
                                            assembly(nop); \
                                            _temp |= hal_ll_hw_reg->sr2 << 16;
#define hal_ll_i2c_get_pclk1 ((uint16_t)(rcc_clocks.pclk1 / 1000000))
#define HAL_LL_I2C_CCR_MINIMUM_ALLOWED_VALUE (0x04)
#define HAL_LL_I2C_MASTER_SPEED_100K 100000UL
#define HAL_LL_I2C_MASTER_SPEED_400K 400000UL
#define HAL_LL_I2C_MASTER_SPEED_1M 1000000UL
#define HAL_LL_I2C_MASTER_SPEED_3M2 3200000UL
#define HAL_LL_I2C_DEFAULT_PASS_COUNT 10000
#define HAL_LL_I2C_CCR_DUTY_BIT 14
#define HAL_LL_I2C_CCR_F_S_BIT 15
#define HAL_LL_I2C_CR1_PE_BIT 0

void hal_ll_i2c_master_close( handle_t *handle ) {
    low_level_handle = hal_ll_i2c_get_handle;
    hal_ll_i2c_hw_specifics_map_local = hal_ll_get_specifics(hal_ll_i2c_get_module_state_address);

    if( low_level_handle->hal_ll_i2c_master_handle != NULL ) {
        low_level_handle->hal_ll_i2c_master_handle = NULL;
        low_level_handle->hal_drv_i2c_master_handle = NULL;

        low_level_handle->init_ll_state = false;

        hal_ll_i2c_hw_specifics_map_local->address = 0;
        hal_ll_i2c_hw_specifics_map_local->timeout = HAL_LL_I2C_DEFAULT_PASS_COUNT;
        hal_ll_i2c_hw_specifics_map_local->speed = HAL_LL_I2C_MASTER_SPEED_100K;

        hal_ll_i2c_master_set_clock(hal_ll_i2c_hw_specifics_map_local, true);
        hal_ll_i2c_master_alternate_functions_set_state( hal_ll_i2c_hw_specifics_map_local, false );
        hal_ll_i2c_master_set_clock(hal_ll_i2c_hw_specifics_map_local, false);

        hal_ll_i2c_hw_specifics_map_local->pins.pin_scl.pin_name = HAL_LL_PIN_NC;
        hal_ll_i2c_hw_specifics_map_local->pins.pin_sda.pin_name = HAL_LL_PIN_NC;
        hal_ll_i2c_hw_specifics_map_local->pins.pin_scl.pin_af = 0;
        hal_ll_i2c_hw_specifics_map_local->pins.pin_sda.pin_af = 0;
    }
}

static hal_ll_err_t hal_ll_i2c_master_read_bare_metal( hal_ll_i2c_hw_specifics_map_t *map, uint8_t *read_data_buf, size_t len_read_data, hal_ll_i2c_master_end_mode_t mode ) {
    hal_ll_i2c_base_handle_t *hal_ll_hw_reg = hal_ll_i2c_get_base_struct(map->base);
    uint16_t time_counter = map->timeout;
    size_t transfer_counter = 0;
    volatile uint32_t status_reg_clear;
    uint8_t status = HAL_LL_I2C_MASTER_SUCCESS;

    if( mode != HAL_LL_I2C_MASTER_WRITE_THEN_READ ) {
        status = hal_ll_i2c_master_start( map );
        if( status != HAL_LL_I2C_MASTER_SUCCESS ) {
            return status;
        }
    }

    if ( len_read_data <= 2 ) {
        // If 2 bytes are read
        ( len_read_data == 1 ) ? ( NULL ) : ( set_reg_bit( &( hal_ll_hw_reg->cr1 ), HAL_LL_I2C_CR1_ACK_BIT),
                                            set_reg_bit( &( hal_ll_hw_reg->cr1 ), HAL_LL_I2C_CR1_POS_BIT ) );

        hal_ll_hw_reg->dr = ( map->address << 1 ) | 1;

        while ( !( check_reg_bit( &(hal_ll_hw_reg->sr1), HAL_LL_I2C_SR1_ADDR_BIT ) ) ) {
            if ( map->timeout ) {
                if ( !time_counter-- )
                    return HAL_LL_I2C_MASTER_TIMEOUT_READ;
            }
        }

        clear_reg_bit( &( hal_ll_hw_reg->cr1 ), HAL_LL_I2C_CR1_ACK_BIT);

        hal_ll_i2c_clear_status_reg(status_reg_clear); // Check status reg value for combined SR1 and SR2 status

        time_counter = map->timeout;
        while( ( len_read_data == 1 ) ? ( !hal_ll_i2c_master_check_event( map->base, HAL_LL_I2C_EVENT_MASTER_BYTE_RECEIVED ) ) :
                                      ( !(check_reg_bit( &( hal_ll_hw_reg->sr1 ), HAL_LL_I2C_SR1_BTF_BIT ) ) ) )
        {
             if ( map->timeout ) {
                if ( !time_counter-- )
                    return HAL_LL_I2C_MASTER_TIMEOUT_READ;
            }
        }

        if( ( mode == HAL_LL_I2C_MASTER_END_MODE_STOP ) || ( mode == HAL_LL_I2C_MASTER_WRITE_THEN_READ ) ) {
            set_reg_bit( &( hal_ll_hw_reg->cr1 ), HAL_LL_I2C_CR1_STOP_BIT );
        } else {
            set_reg_bit( &( hal_ll_hw_reg->cr1 ), HAL_LL_I2C_CR1_START_BIT );

            time_counter = map->timeout;
            while ( !hal_ll_i2c_master_check_event( map->base, HAL_LL_I2C_EVENT_MASTER_MODE_SELECT ) ) {
                if ( map->timeout ) {
                    if ( !time_counter-- )
                        return HAL_LL_I2C_MASTER_TIMEOUT_READ;
                }
            }
        }

        ( len_read_data == 1 ) ? ( read_data_buf[ transfer_counter ] = hal_ll_hw_reg->dr ) :
                                 ( read_data_buf[ transfer_counter++ ] = hal_ll_hw_reg->dr, read_data_buf[ transfer_counter++ ] = hal_ll_hw_reg->dr );

        ( len_read_data == 1 ) ? ( NULL ) : ( clear_reg_bit( &(hal_ll_hw_reg->cr1), HAL_LL_I2C_CR1_POS_BIT ) );
    } else {
        set_reg_bit( &( hal_ll_hw_reg->cr1 ), HAL_LL_I2C_CR1_ACK_BIT );
        hal_ll_hw_reg->dr = ( map->address << 1 ) | 1;

        time_counter = map->timeout;
        while ( !hal_ll_i2c_master_check_event( map->base, HAL_LL_I2C_EVENT_MASTER_RECEIVER_MODE_SELECTED ) ) {
            if ( map->timeout ) {
                if ( !time_counter-- )
                    return HAL_LL_I2C_MASTER_TIMEOUT_READ;
            }
        }

        transfer_counter = 0;
        while ( transfer_counter < len_read_data - 3 ) {
            time_counter = map->timeout;
            while ( !hal_ll_i2c_master_check_event( map->base, HAL_LL_I2C_EVENT_MASTER_BYTE_RECEIVED ) ) {
                if ( map->timeout ) {
                    if ( !time_counter-- )
                        return HAL_LL_I2C_MASTER_TIMEOUT_READ;
                }
            }
            read_data_buf[ transfer_counter++ ] = hal_ll_hw_reg->dr;
        }

        time_counter = map->timeout;
        while ( !check_reg_bit( &( hal_ll_hw_reg->sr1 ), HAL_LL_I2C_SR1_BTF_BIT ) ) {
            if ( map->timeout ) {
                if ( !time_counter-- )
                    return HAL_LL_I2C_MASTER_TIMEOUT_READ;
            }
        }

        clear_reg_bit( &( hal_ll_hw_reg->cr1 ), HAL_LL_I2C_CR1_ACK_BIT );
        read_data_buf[ transfer_counter++ ] = hal_ll_hw_reg->dr;

        time_counter = map->timeout;
        while ( !check_reg_bit( &( hal_ll_hw_reg->sr1 ), HAL_LL_I2C_SR1_BTF_BIT ) ) {
            if ( map->timeout ) {
                if ( !time_counter-- )
                    return HAL_LL_I2C_MASTER_TIMEOUT_READ;
            }
        }

        if( ( mode == HAL_LL_I2C_MASTER_END_MODE_STOP ) || ( mode == HAL_LL_I2C_MASTER_WRITE_THEN_READ ) ) {
            set_reg_bit( &( hal_ll_hw_reg->cr1 ), HAL_LL_I2C_CR1_STOP_BIT );
        } else {
            set_reg_bit( &( hal_ll_hw_reg->cr1 ), HAL_LL_I2C_CR1_START_BIT );

            time_counter = map->timeout;
            while ( !hal_ll_i2c_master_check_event( map->base, HAL_LL_I2C_EVENT_MASTER_MODE_SELECT ) ) {
                if ( map->timeout ) {
                    if ( !time_counter-- )
                        return HAL_LL_I2C_MASTER_TIMEOUT_READ;
                }
            }
        }

        read_data_buf[ transfer_counter++ ] = hal_ll_hw_reg->dr;
        read_data_buf[ transfer_counter++ ] = hal_ll_hw_reg->dr;
    }

    return HAL_LL_I2C_MASTER_SUCCESS;
}

static hal_ll_err_t hal_ll_i2c_master_write_bare_metal( hal_ll_i2c_hw_specifics_map_t *map, uint8_t *write_data_buf, size_t len_write_data, hal_ll_i2c_master_end_mode_t mode ) {
    hal_ll_i2c_base_handle_t *hal_ll_hw_reg = hal_ll_i2c_get_base_struct(map->base);
    uint16_t time_counter = map->timeout;
    size_t transfer_counter = 0;
    uint8_t status = HAL_LL_I2C_MASTER_SUCCESS;

    status = hal_ll_i2c_master_start( map );
    if( status != HAL_LL_I2C_MASTER_SUCCESS ) {
        return status;
    }

    hal_ll_hw_reg->dr = ( map->address << 1 );

    while ( !hal_ll_i2c_master_check_event( map->base, HAL_LL_I2C_EVENT_MASTER_TRANSMITTER_MODE_SELECTED ) ) {
        if ( map->timeout ) {
            if ( !time_counter-- )
                return HAL_LL_I2C_MASTER_TIMEOUT_WRITE;
        }
    }

    for ( transfer_counter = 0; transfer_counter < len_write_data - 1; transfer_counter++ ) {
        hal_ll_hw_reg->dr = write_data_buf[ transfer_counter ];

        time_counter = map->timeout;
        while ( !hal_ll_i2c_master_check_event( map->base, HAL_LL_I2C_EVENT_MASTER_BYTE_TRANSMITTING ) ) {
            if ( map->timeout ) {
                if ( !time_counter-- )
                    return HAL_LL_I2C_MASTER_TIMEOUT_WRITE;
            }
        }
    }

    hal_ll_hw_reg->dr = write_data_buf[ transfer_counter ];

    time_counter = map->timeout;
    while ( !hal_ll_i2c_master_check_event( map->base, HAL_LL_I2C_EVENT_MASTER_BYTE_TRANSMITTED ) ) {
        if ( map->timeout ) {
            if ( !time_counter-- )
                return HAL_LL_I2C_MASTER_TIMEOUT_WRITE;
        }
    }

    if( mode == HAL_LL_I2C_MASTER_END_MODE_STOP ) {
        set_reg_bit( &( hal_ll_hw_reg->cr1 ), HAL_LL_I2C_CR1_STOP_BIT );
    } else {
        /**
         * @note When R/W = 0, the input sample acquisition period starts
         * on the falling edge of SCL once the C0 bit of the command
         * byte has been latched, and ends when a Stop or
         * repeated Start condition has been issued.
         **/
        #ifdef __TFT_RESISTIVE_TSC2003__
        Delay_1ms();
        #endif
        set_reg_bit( &( hal_ll_hw_reg->cr1 ), HAL_LL_I2C_CR1_START_BIT );

        time_counter = map->timeout;
        while ( !hal_ll_i2c_master_check_event( map->base, HAL_LL_I2C_EVENT_MASTER_MODE_SELECT ) ) {
            if ( map->timeout ) {
                if ( !time_counter-- )
                    return HAL_LL_I2C_MASTER_TIMEOUT_WRITE;
            }
        }
    }

    return HAL_LL_I2C_MASTER_SUCCESS;
}

static hal_ll_err_t hal_ll_i2c_master_start( hal_ll_i2c_hw_specifics_map_t *map ) {
    hal_ll_i2c_base_handle_t *hal_ll_hw_reg = hal_ll_i2c_get_base_struct(map->base);
    uint16_t time_counter = map->timeout;
    uint8_t result = HAL_LL_I2C_MASTER_SUCCESS;

    result = hal_ll_i2c_master_wait_for_idle( map );
    if ( result != HAL_LL_I2C_MASTER_SUCCESS )
        return HAL_LL_I2C_MASTER_TIMEOUT_START;

    set_reg_bit( &( hal_ll_hw_reg->cr1 ), HAL_LL_I2C_CR1_START_BIT );

    if ( check_reg_bit( &( hal_ll_hw_reg->sr1 ), HAL_LL_I2C_SR1_ARLO_BIT ) )
        return HAL_LL_I2C_MASTER_ARBITRATION_LOST;

    while ( !hal_ll_i2c_master_check_event( map->base, HAL_LL_I2C_EVENT_MASTER_MODE_SELECT ) ) {
        if ( map->timeout ) {
            if ( !time_counter-- )
                return HAL_LL_I2C_MASTER_TIMEOUT_START;
        }
    }

    return HAL_LL_I2C_MASTER_SUCCESS;
}

static void hal_ll_i2c_hw_init( hal_ll_i2c_hw_specifics_map_t *map ) {
    hal_ll_i2c_base_handle_t *hal_ll_hw_reg = hal_ll_i2c_get_base_struct(map->base);
    uint16_t frequency_range;
    rcc_clocks_t rcc_clocks;

    #ifdef __STM32F101_103_ERRATA__
    set_reg_bit( &( hal_ll_hw_reg->cr1 ), HAL_LL_I2C_CR1_SWRST_BIT );
    #endif

    RCC_GetClocksFrequency( &rcc_clocks );

    #ifdef __STM32F101_103_ERRATA__
    clear_reg_bit( &( hal_ll_hw_reg->cr1 ), HAL_LL_I2C_CR1_SWRST_BIT );
    #endif

    frequency_range = hal_ll_i2c_get_pclk1;

    hal_ll_hw_reg->cr2 &= ~HAL_LL_I2C_CR2_FREQ_MASK;

    hal_ll_hw_reg->cr2 = frequency_range;

    clear_reg_bit( &( hal_ll_hw_reg->cr1 ), HAL_LL_I2C_CR1_PE_BIT );

    hal_ll_hw_reg->trise = hal_ll_set_frequency( frequency_range, map->speed );

    hal_ll_hw_reg->ccr = hal_ll_i2c_calculate_speed( rcc_clocks.pclk1, map->speed );

    hal_ll_hw_reg->cr1 = 0;

    set_reg_bit( &( hal_ll_hw_reg->cr1 ), HAL_LL_I2C_CR1_PE_BIT );
}
